Lab1/Code/syntax.output
State 91 conflicts: 12 reduce/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier error SEMI
    6       | Specifier SEMI
    7       | Specifier error
    8       | error SEMI
    9       | Specifier FunDec CompSt

   10 ExtDecList: VarDec
   11           | VarDec COMMA ExtDecList

   12 Specifier: TYPE
   13          | StructSpecifier

   14 StructSpecifier: STRUCT OptTag LC DefList RC
   15                | STRUCT OptTag LC error RC
   16                | STRUCT error LC DefList RC
   17                | STRUCT Tag

   18 OptTag: ID
   19       | %empty

   20 Tag: ID

   21 VarDec: ID
   22       | VarDec LB INT RB
   23       | error LB INT RB
   24       | VarDec LB error RB

   25 FunDec: ID LP VarList RP
   26       | error LP VarList RP
   27       | ID LP RP
   28       | ID LP error RP

   29 VarList: ParamDec COMMA VarList
   30        | ParamDec

   31 ParamDec: Specifier VarDec

   32 CompSt: LC DefList StmtList RC
   33       | LC DefList error RC
   34       | error RC

   35 StmtList: Stmt StmtList
   36         | %empty

   37 Stmt: Exp SEMI
   38     | error SEMI
   39     | CompSt
   40     | RETURN Exp SEMI
   41     | RETURN error SEMI
   42     | IF LP Exp RP Stmt
   43     | IF LP error RP Stmt
   44     | IF LP Exp RP Stmt ELSE Stmt
   45     | IF LP error RP Stmt ELSE Stmt
   46     | WHILE LP Exp RP Stmt
   47     | WHILE LP error RP Stmt

   48 DefList: Def DefList
   49        | %empty

   50 Def: Specifier DecList SEMI
   51    | Specifier error SEMI

   52 DecList: Dec
   53        | Dec COMMA DecList

   54 Dec: VarDec
   55    | VarDec ASSIGNOP Exp
   56    | error ASSIGNOP Exp

   57 Exp: Exp ASSIGNOP Exp
   58    | Exp AND Exp
   59    | Exp OR Exp
   60    | Exp RELOP Exp
   61    | Exp PLUS Exp
   62    | Exp MINUS Exp
   63    | Exp STAR Exp
   64    | Exp DIV Exp
   65    | LP Exp RP
   66    | LP error RP
   67    | MINUS Exp
   68    | NOT Exp
   69    | ID LP Args RP
   70    | ID LP RP
   71    | Exp LB Exp RB
   72    | Exp LB error RB
   73    | error LB Exp RB
   74    | Exp DOT ID
   75    | ID
   76    | INT
   77    | FLOAT

   78 Args: Exp COMMA Args
   79     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 5 7 8 15 16 23 24 26 28 33 34 38 41 43 45 47 51 56 66 72 73
    INT (258) 22 23 76
    FLOAT (259) 77
    ID (260) 18 20 21 25 27 28 69 70 74 75
    TYPE (261) 12
    SEMI (262) 4 5 6 8 37 38 40 41 50 51
    COMMA (263) 11 29 53 78
    RELOP (264) 60
    ASSIGNOP (265) 55 56 57
    PLUS (266) 61
    MINUS (267) 62 67
    STAR (268) 63
    DIV (269) 64
    AND (270) 58
    OR (271) 59
    DOT (272) 74
    NOT (273) 68
    LP (274) 25 26 27 28 42 43 44 45 46 47 65 66 69 70
    RP (275) 25 26 27 28 42 43 44 45 46 47 65 66 69 70
    LB (276) 22 23 24 71 72 73
    RB (277) 22 23 24 71 72 73
    LC (278) 14 15 16 32 33
    RC (279) 14 15 16 32 33 34
    STRUCT (280) 14 15 16 17
    RETURN (281) 40 41
    IF (282) 42 43 44 45
    ELSE (283) 44 45
    WHILE (284) 46 47
    LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

    $accept (31)
        on left: 0
    Program (32)
        on left: 1
        on right: 0
    ExtDefList (33)
        on left: 2 3
        on right: 1 2
    ExtDef (34)
        on left: 4 5 6 7 8 9
        on right: 2
    ExtDecList (35)
        on left: 10 11
        on right: 4 11
    Specifier (36)
        on left: 12 13
        on right: 4 5 6 7 9 31 50 51
    StructSpecifier (37)
        on left: 14 15 16 17
        on right: 13
    OptTag (38)
        on left: 18 19
        on right: 14 15
    Tag (39)
        on left: 20
        on right: 17
    VarDec (40)
        on left: 21 22 23 24
        on right: 10 11 22 24 31 54 55
    FunDec (41)
        on left: 25 26 27 28
        on right: 9
    VarList (42)
        on left: 29 30
        on right: 25 26 29
    ParamDec (43)
        on left: 31
        on right: 29 30
    CompSt (44)
        on left: 32 33 34
        on right: 9 39
    StmtList (45)
        on left: 35 36
        on right: 32 35
    Stmt (46)
        on left: 37 38 39 40 41 42 43 44 45 46 47
        on right: 35 42 43 44 45 46 47
    DefList (47)
        on left: 48 49
        on right: 14 16 32 33 48
    Def (48)
        on left: 50 51
        on right: 48
    DecList (49)
        on left: 52 53
        on right: 50 53
    Dec (50)
        on left: 54 55 56
        on right: 52 53
    Exp (51)
        on left: 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77
        on right: 37 40 42 44 46 55 56 57 58 59 60 61 62 63 64 65 67 68 71 72 73 74 78 79
    Args (52)
        on left: 78 79
        on right: 69 78


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    8 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   12 Specifier: TYPE .

    $default  reduce using rule 12 (Specifier)


State 3

   14 StructSpecifier: STRUCT . OptTag LC DefList RC
   15                | STRUCT . OptTag LC error RC
   16                | STRUCT . error LC DefList RC
   17                | STRUCT . Tag

    error  shift, and go to state 10
    ID     shift, and go to state 11

    LC  reduce using rule 19 (OptTag)

    OptTag  go to state 12
    Tag     go to state 13


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 14


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 15
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . error SEMI
    6       | Specifier . SEMI
    7       | Specifier . error
    9       | Specifier . FunDec CompSt

    error  shift, and go to state 16
    ID     shift, and go to state 17
    SEMI   shift, and go to state 18

    ExtDecList  go to state 19
    VarDec      go to state 20
    FunDec      go to state 21


State 8

   13 Specifier: StructSpecifier .

    $default  reduce using rule 13 (Specifier)


State 9

    8 ExtDef: error SEMI .

    $default  reduce using rule 8 (ExtDef)


State 10

   16 StructSpecifier: STRUCT error . LC DefList RC

    LC  shift, and go to state 22


State 11

   18 OptTag: ID .
   20 Tag: ID .

    LC        reduce using rule 18 (OptTag)
    $default  reduce using rule 20 (Tag)


State 12

   14 StructSpecifier: STRUCT OptTag . LC DefList RC
   15                | STRUCT OptTag . LC error RC

    LC  shift, and go to state 23


State 13

   17 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 17 (StructSpecifier)


State 14

    0 $accept: Program $end .

    $default  accept


State 15

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 16

    5 ExtDef: Specifier error . SEMI
    7       | Specifier error .
   23 VarDec: error . LB INT RB
   26 FunDec: error . LP VarList RP

    SEMI  shift, and go to state 24
    LP    shift, and go to state 25
    LB    shift, and go to state 26

    $default  reduce using rule 7 (ExtDef)


State 17

   21 VarDec: ID .
   25 FunDec: ID . LP VarList RP
   27       | ID . LP RP
   28       | ID . LP error RP

    LP  shift, and go to state 27

    $default  reduce using rule 21 (VarDec)


State 18

    6 ExtDef: Specifier SEMI .

    $default  reduce using rule 6 (ExtDef)


State 19

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 28


State 20

   10 ExtDecList: VarDec .
   11           | VarDec . COMMA ExtDecList
   22 VarDec: VarDec . LB INT RB
   24       | VarDec . LB error RB

    COMMA  shift, and go to state 29
    LB     shift, and go to state 30

    $default  reduce using rule 10 (ExtDecList)


State 21

    9 ExtDef: Specifier FunDec . CompSt

    error  shift, and go to state 31
    LC     shift, and go to state 32

    CompSt  go to state 33


State 22

   16 StructSpecifier: STRUCT error LC . DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 49 (DefList)

    Specifier        go to state 34
    StructSpecifier  go to state 8
    DefList          go to state 35
    Def              go to state 36


State 23

   14 StructSpecifier: STRUCT OptTag LC . DefList RC
   15                | STRUCT OptTag LC . error RC

    error   shift, and go to state 37
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 49 (DefList)

    Specifier        go to state 34
    StructSpecifier  go to state 8
    DefList          go to state 38
    Def              go to state 36


State 24

    5 ExtDef: Specifier error SEMI .

    $default  reduce using rule 5 (ExtDef)


State 25

   26 FunDec: error LP . VarList RP

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 39
    StructSpecifier  go to state 8
    VarList          go to state 40
    ParamDec         go to state 41


State 26

   23 VarDec: error LB . INT RB

    INT  shift, and go to state 42


State 27

   25 FunDec: ID LP . VarList RP
   27       | ID LP . RP
   28       | ID LP . error RP

    error   shift, and go to state 43
    TYPE    shift, and go to state 2
    RP      shift, and go to state 44
    STRUCT  shift, and go to state 3

    Specifier        go to state 39
    StructSpecifier  go to state 8
    VarList          go to state 45
    ParamDec         go to state 41


State 28

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 29

   11 ExtDecList: VarDec COMMA . ExtDecList

    error  shift, and go to state 46
    ID     shift, and go to state 47

    ExtDecList  go to state 48
    VarDec      go to state 20


State 30

   22 VarDec: VarDec LB . INT RB
   24       | VarDec LB . error RB

    error  shift, and go to state 49
    INT    shift, and go to state 50


State 31

   34 CompSt: error . RC

    RC  shift, and go to state 51


State 32

   32 CompSt: LC . DefList StmtList RC
   33       | LC . DefList error RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 49 (DefList)

    Specifier        go to state 34
    StructSpecifier  go to state 8
    DefList          go to state 52
    Def              go to state 36


State 33

    9 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 9 (ExtDef)


State 34

   50 Def: Specifier . DecList SEMI
   51    | Specifier . error SEMI

    error  shift, and go to state 53
    ID     shift, and go to state 47

    VarDec   go to state 54
    DecList  go to state 55
    Dec      go to state 56


State 35

   16 StructSpecifier: STRUCT error LC DefList . RC

    RC  shift, and go to state 57


State 36

   48 DefList: Def . DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 49 (DefList)

    Specifier        go to state 34
    StructSpecifier  go to state 8
    DefList          go to state 58
    Def              go to state 36


State 37

   15 StructSpecifier: STRUCT OptTag LC error . RC

    RC  shift, and go to state 59


State 38

   14 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 60


State 39

   31 ParamDec: Specifier . VarDec

    error  shift, and go to state 46
    ID     shift, and go to state 47

    VarDec  go to state 61


State 40

   26 FunDec: error LP VarList . RP

    RP  shift, and go to state 62


State 41

   29 VarList: ParamDec . COMMA VarList
   30        | ParamDec .

    COMMA  shift, and go to state 63

    $default  reduce using rule 30 (VarList)


State 42

   23 VarDec: error LB INT . RB

    RB  shift, and go to state 64


State 43

   28 FunDec: ID LP error . RP

    RP  shift, and go to state 65


State 44

   27 FunDec: ID LP RP .

    $default  reduce using rule 27 (FunDec)


State 45

   25 FunDec: ID LP VarList . RP

    RP  shift, and go to state 66


State 46

   23 VarDec: error . LB INT RB

    LB  shift, and go to state 26


State 47

   21 VarDec: ID .

    $default  reduce using rule 21 (VarDec)


State 48

   11 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 11 (ExtDecList)


State 49

   24 VarDec: VarDec LB error . RB

    RB  shift, and go to state 67


State 50

   22 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 68


State 51

   34 CompSt: error RC .

    $default  reduce using rule 34 (CompSt)


State 52

   32 CompSt: LC DefList . StmtList RC
   33       | LC DefList . error RC

    error   shift, and go to state 69
    INT     shift, and go to state 70
    FLOAT   shift, and go to state 71
    ID      shift, and go to state 72
    MINUS   shift, and go to state 73
    NOT     shift, and go to state 74
    LP      shift, and go to state 75
    LC      shift, and go to state 32
    RETURN  shift, and go to state 76
    IF      shift, and go to state 77
    WHILE   shift, and go to state 78

    RC  reduce using rule 36 (StmtList)

    CompSt    go to state 79
    StmtList  go to state 80
    Stmt      go to state 81
    Exp       go to state 82


State 53

   23 VarDec: error . LB INT RB
   51 Def: Specifier error . SEMI
   56 Dec: error . ASSIGNOP Exp

    SEMI      shift, and go to state 83
    ASSIGNOP  shift, and go to state 84
    LB        shift, and go to state 26


State 54

   22 VarDec: VarDec . LB INT RB
   24       | VarDec . LB error RB
   54 Dec: VarDec .
   55    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 85
    LB        shift, and go to state 30

    $default  reduce using rule 54 (Dec)


State 55

   50 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 86


State 56

   52 DecList: Dec .
   53        | Dec . COMMA DecList

    COMMA  shift, and go to state 87
